--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,111 @@
-asttokens==2.4.0
-backcall==0.2.0
-colorama==0.4.6
-comm==0.1.4
+absl-py==2.0.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+astunparse==1.6.3
+cachetools==5.3.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+cloudpickle==3.0.0
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1691044910542/work
 contourpy==1.1.1
 cycler==0.12.1
-debugpy==1.8.0
-decorator==5.1.1
-executing==2.0.0
+debugpy @ file:///C:/b/abs_c0y1fjipt2/croot/debugpy_1690906864587/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1700579780973/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+filelock==3.9.0
+flatbuffers==23.5.26
 fonttools==4.43.1
-ipykernel==6.25.2
-ipython==8.16.1
-jedi==0.19.1
-joblib==1.3.2
-jupyter_client==8.3.1
-jupyter_core==5.3.2
+fsspec==2023.4.0
+gast==0.5.4
+google-auth==2.24.0
+google-auth-oauthlib==1.1.0
+google-pasta==0.2.0
+grpcio==1.59.3
+h5py==3.10.0
+idna==3.6
+importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1701632192416/work
+ipykernel @ file:///D:/bld/ipykernel_1698244157926/work
+ipython @ file:///D:/bld/ipython_1701092580049/work
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+Jinja2==3.1.2
+joblib==1.4.0
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1699283905679/work
+jupyter_core @ file:///D:/bld/jupyter_core_1698673822668/work
+keras==2.15.0
 kiwisolver==1.4.5
+libclang==16.0.6
+llvmlite==0.42.0
+Markdown==3.5.1
+MarkupSafe==2.1.3
 matplotlib==3.8.0
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.8
-numpy==1.26.0
-packaging==23.2
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
+ml-dtypes==0.2.0
+mpmath==1.3.0
+nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1697083700168/work
+networkx==3.2.1
+numba==0.59.1
+numpy==1.26.4
+nvidia-cuda-runtime-cu12==12.4.99
+nvidia-pyindex==1.0.9
+oauthlib==3.2.2
+opt-einsum==3.3.0
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
 pandas==2.1.1
-parso==0.8.3
-pickleshare==0.7.5
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
 Pillow==10.0.1
-platformdirs==3.11.0
-prompt-toolkit==3.0.39
-psutil==5.9.5
-pure-eval==0.2.2
-Pygments==2.16.1
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1699715570510/work
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1699963054032/work
+protobuf==4.23.4
+psutil @ file:///C:/ci_311_rebuilds/psutil_1679005906571/work
+pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+pyaml==23.12.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
 pyparsing==3.1.1
-python-dateutil==2.8.2
+PySide6==6.6.3
+PySide6_Addons==6.6.3
+PySide6_Essentials==6.6.3
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
 pytz==2023.3.post1
-pywin32==306
-pyzmq==25.1.1
-scikit-learn==1.3.1
-scipy==1.11.3
+pywin32==305.1
+PyYAML==6.0.1
+pyzmq @ file:///C:/b/abs_655zk4a3s8/croot/pyzmq_1686601465034/work
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.2.2
+scikit-multilearn==0.2.0
+scikit-optimize==0.9.0
+scipy==1.13.0
 seaborn==0.13.0
-six==1.16.0
-stack-data==0.6.3
-threadpoolctl==3.2.0
-tornado==6.3.3
-traitlets==5.11.2
+shap==0.45.0
+shiboken6==6.6.3
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+slicer==0.0.7
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+sympy==1.12
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+threadpoolctl==3.5.0
+torch==2.2.2+cu118
+torchaudio==2.2.2+cu118
+torchvision==0.17.2+cu118
+tornado @ file:///C:/b/abs_0cbrstidzg/croot/tornado_1696937003724/work
+tqdm==4.66.2
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1701095650114/work
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1695040754690/work
 tzdata==2023.3
-wcwidth==0.2.8
-xgboost==2.0.0
+urllib3==2.1.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1700607916581/work
+Werkzeug==3.0.1
+wrapt==1.14.1
+xgboost==2.0.3
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
